@@ -1,3 +1,8 @@
+2007-10-30  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* ChangeLogService.cs: Fix ChangeLog location problem in
+	  single-changelog-per-project mode.
+
 2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* ChangeLogAddIn.addin.xml: Bump MD version.
